Add info below title

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
         </style>
     </head>
     <body>
-    <h3>Prototyp eines föderierten Verzeichnisses</h3>
-    TODO
+    <h3>Prototyp eines föderierten Verzeichnisses sozialer Unterstützungsangebote</h3>
+    Im Hintergrund liegt keine zentrale Datenbank im Backend. Stattdessen werden unterschiedliche Datenquellen zusammengeführt, die einem gemeinsamen Datenschema folgen.
     <br/><br/>
     <input type="button" id="fetch-btn" value="Fetch offers" />
     <br/><br/>
