Translate button title

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <h3>Prototyp eines föderierten Verzeichnisses sozialer Unterstützungsangebote</h3>
     Im Hintergrund liegt keine zentrale Datenbank im Backend. Stattdessen werden unterschiedliche Datenquellen zusammengeführt, die einem gemeinsamen Datenschema folgen.
     <br/><br/>
-    <input type="button" id="fetch-btn" value="Fetch offers" />
+    <input type="button" id="fetch-btn" value="Verzeichnis laden" />
     <br/><br/>
     <table id="fetch-table"></table>
 
